--- a/index.html
+++ b/index.html
@@ -10,58 +10,43 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
-          <label for="add1">1st number:</label>
-          <input id="add1" class="form-control" type="text">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="add2">2nd number:</label>
-          <input id="add2" class="form-control" type="text">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn btn-primary">Add!</button>
-      </form>
-      <br>
-      <br>
-      <form id="subtract">
-        <div class="form-group">
-          <label for="sub1">1st number:</label>
-          <input id="sub1" class="form-control" type="text">
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="add" checked>
+            add
+          </label>
         </div>
-        <div class="form-group">
-          <label for="sub2">2nd number:</label>
-          <input id="sub2" class="form-control" type="text">
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            subtract
+          </label>
         </div>
-        <button type="submit" class="btn btn-primary">Subtract!</button>
-      </form>
-<br>
-<br>
-
-      <form id="multiply">
-        <div class="form-group">
-          <label for="mul1">1st number:</label>
-          <input id="mul1" class="form-control" type="text">
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            multiply
+          </label>
         </div>
-        <div class="form-group">
-          <label for="mul2">2nd number:</label>
-          <input id="mul2" class="form-control" type="text">
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            divide
+          </label>
         </div>
-        <button type="submit" class="btn btn-primary">Multiply!</button>
-      </form>
-<br>
-<br>
-      <form id="divide">
-        <div class="form-group">
-          <label for="div1">1st number:</label>
-          <input id="div1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="div2">2nd number:</label>
-          <input id="div2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-primary">Divide!</button>
+        <button type="submit" class="btn btn-primary">Go!</button>
       </form>
       <div id="output">
+
       </div>
     </div>
   </body>
